--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ scipy = "^1.9.0"
 pandas = "^1.4.3"
 rpy2 = "^3.5.3"
 jupyter = "^1.0.0"
+matplotlib = "^3.5.2"
+seaborn = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 
